/getFiles handler
